Fixed tag not visible (for sintax error of a class) in the index.html file. Update of the margins for ul and li in the divSections in the style.css file.

--- a/css/style.css
+++ b/css/style.css
@@ -115,9 +115,10 @@ main{
 }
 .divSections details ul{
     list-style-type: none;
+    margin-top: 10px;
 }
 .divSections details li{
-    margin: 25px 0 0 0;
+    margin: 15px 0 0 0;
 }
 .divSections text{
     font-size: 1em;
